--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bulma": "^0.7.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-fontawesome": "^1.6.1",
     "react-scripts": "3.1.0"
   },
   "scripts": {
